# apps.core.preloaded.udisks-automount-agent

./: AUTHORS  CMakeLists.txt  Changelog  project.config  udisks-automount-agent.manifest
data/: 10-udisks.pkla  10-udisks.rules  udisks-automount-agent.service.in
examples/: CMakeLists.txt  sample-mount-listener.c  sample-notif-listener.c
packaging/: udisks-automount-agent.changes  udisks-automount-agent.service  udisks-automount-agent.spec
src/: udisk-agent.c
