CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sample-udisks-agent-notif-listener)

SET(SRCS sample-notif-listener.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

MESSAGE("FLAGS: ${CMAKE_C_FLAGS}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
