CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sample-listeners)

SET(NOTIF_LISTENER_NAME sample-udisks-agent-notif-listener)
SET(NOTIF_SRCS sample-notif-listener.c)
ADD_EXECUTABLE(${NOTIF_LISTENER_NAME} ${NOTIF_SRCS})
TARGET_LINK_LIBRARIES(${NOTIF_LISTENER_NAME} ${pkgs_LDFLAGS})
INSTALL(TARGETS ${NOTIF_LISTENER_NAME} DESTINATION bin)

SET(MOUNT_LISTENER_NAME sample-udisks-agent-mount-listener)
SET(MOUNT_SRCS sample-mount-listener.c)
ADD_EXECUTABLE(${MOUNT_LISTENER_NAME} ${MOUNT_SRCS})
TARGET_LINK_LIBRARIES(${MOUNT_LISTENER_NAME} ${pkgs_LDFLAGS})
INSTALL(TARGETS ${MOUNT_LISTENER_NAME} DESTINATION bin)
